Bank tab: filled bucket leads, ghost icons keep the carried variant
Two variant-display fixes for the sectioned bank tab (its ghost icon
falls back to the FIRST id when no variant is banked):

- FarmingTools.ANY_BOTTOMLESS_BUCKET was a Set.of, whose iteration
  order is randomized per JVM - the bucket ghost could show the empty
  variant. Now an insertion-ordered set with the FILLED bucket first.
- Outfits switched from Set.of to an insertion-ordered set so the
  generated default-recolour-first order actually survives, and
  FarmingBankTagService orders every tab item id list carried-variants-
  first: withdrawing the last graceful piece keeps that piece own
  recolour on screen (it is on the player now) instead of flipping the
  ghosts to arbitrary sibling recolors.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>